--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "buefy": "^0.8.9",
     "core-js": "^3.4.4",
-    "node-sass": "^4.13.0",
+    "node-sass": "^4.13.1",
     "sass-loader": "^8.0.2",
     "vue": "^2.6.11",
-    "vue-router": "^3.1.3"
+    "vue-apollo": "^3.0.3",
+    "vue-router": "^3.1.3",
+    "vue-spinner": "^1.0.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
