--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "sass-loader": "^8.0.2",
     "vue": "^2.6.11",
     "vue-apollo": "^3.0.3",
-    "vue-router": "^3.1.3",
-    "vue-spinner": "^1.0.3"
+    "vue-router": "^3.1.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
