--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "buefy": "^0.9.4",
     "core-js": "^3.8.2",
     "graphql": "^15.0.0",
+    "moment": "^2.29.1",
     "node-sass": "^4.14.1",
     "sass-loader": "^10.1.1",
     "tachyons": "^4.12.0",
