--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "buefy": "^0.9.4",
     "core-js": "^3.8.3",
     "graphql": "^15.4.0",
+    "lodash": "^4.17.20",
     "moment": "^2.29.1",
     "node-sass": "^5.0.0",
     "sass-loader": "^10.1.1",
