--- a/package.json
+++ b/package.json
@@ -33,6 +33,15 @@
 		"autoprefixer": "^10.4.2",
 		"postcss": "^8.4.5",
 		"postcss-nested": "^5.0.6",
+		"stylelint": "^14.3.0",
+		"stylelint-config-idiomatic-order": "^8.1.0",
+		"stylelint-config-prettier": "^9.0.3",
+		"stylelint-config-standard": "^24.0.0",
+		"stylelint-declaration-strict-value": "^1.8.0",
+		"stylelint-high-performance-animation": "^1.6.0",
+		"stylelint-max-lines": "^0.1.0",
+		"stylelint-order": "^3.1.1",
+		"stylelint-use-logical-spec": "^3.2.2",
 		"typescript": "^4.4.4",
 		"vite": "^2.7.2"
 	}
