--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
 	},
 	"dependencies": {
 		"@graphql-codegen/cli": "^2.4.0",
+		"@types/react-router-dom": "^5.3.3",
 		"axios": "^0.25.0",
 		"graphql": "^16.2.0",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-router": "^6.2.1",
+		"react-router-dom": "^6.2.1",
 		"urql": "^2.0.6"
 	},
 	"devDependencies": {
