Fix broken build

--- a/package.json
+++ b/package.json
@@ -1,50 +1,49 @@
 {
-	"name": "kitsuawards-client",
-	"version": "0.2.0",
-	"scripts": {
-		"start": "vite",
-		"dev": "vite",
-		"build": "tsc && vite build",
-		"preview": "vite preview",
-		"gql": "graphql-codegen --config codegen.yml"
-	},
-	"dependencies": {
-		"@graphql-codegen/cli": "^2.4.0",
-		"@types/react-router-dom": "^5.3.3",
-		"axios": "^0.25.0",
-		"graphql": "^16.2.0",
-		"react": "^17.0.2",
-		"react-dom": "^17.0.2",
-		"react-router": "^6.2.1",
-		"react-router-dom": "^6.2.1",
-		"urql": "^2.0.6"
-	},
-	"devDependencies": {
-		"@graphql-codegen/cli": "2.4.0",
-		"@graphql-codegen/introspection": "2.1.1",
-		"@graphql-codegen/near-operation-file-preset": "^2.2.3",
-		"@graphql-codegen/typescript": "2.4.2",
-		"@graphql-codegen/typescript-document-nodes": "2.2.2",
-		"@graphql-codegen/typescript-graphql-files-modules": "2.1.1",
-		"@graphql-codegen/typescript-operations": "2.2.2",
-		"@graphql-codegen/typescript-urql": "^3.4.2",
-		"@graphql-codegen/urql-introspection": "2.1.1",
-		"@types/react": "^17.0.33",
-		"@types/react-dom": "^17.0.10",
-		"@vitejs/plugin-react": "^1.0.7",
-		"autoprefixer": "^10.4.2",
-		"postcss": "^8.4.5",
-		"postcss-nested": "^5.0.6",
-		"stylelint": "^14.3.0",
-		"stylelint-config-idiomatic-order": "^8.1.0",
-		"stylelint-config-prettier": "^9.0.3",
-		"stylelint-config-standard": "^24.0.0",
-		"stylelint-declaration-strict-value": "^1.8.0",
-		"stylelint-high-performance-animation": "^1.6.0",
-		"stylelint-max-lines": "^0.1.0",
-		"stylelint-order": "^3.1.1",
-		"stylelint-use-logical-spec": "^3.2.2",
-		"typescript": "^4.4.4",
-		"vite": "^2.7.2"
-	}
+  "name": "kitsuawards-client",
+  "version": "0.2.0",
+  "scripts": {
+    "start": "vite",
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
+    "gql": "graphql-codegen --config codegen.yml"
+  },
+  "dependencies": {
+    "@graphql-codegen/cli": "^2.4.0",
+    "axios": "^0.25.0",
+    "graphql": "^16.2.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.1",
+    "urql": "^2.0.6"
+  },
+  "devDependencies": {
+    "@graphql-codegen/cli": "2.4.0",
+    "@graphql-codegen/introspection": "2.1.1",
+    "@graphql-codegen/near-operation-file-preset": "^2.2.3",
+    "@graphql-codegen/typescript": "2.4.2",
+    "@graphql-codegen/typescript-document-nodes": "2.2.2",
+    "@graphql-codegen/typescript-graphql-files-modules": "2.1.1",
+    "@graphql-codegen/typescript-operations": "2.2.2",
+    "@graphql-codegen/typescript-urql": "^3.4.2",
+    "@graphql-codegen/urql-introspection": "2.1.1",
+    "@types/babel__core": "^7.1.19",
+    "@types/react": "^17.0.33",
+    "@types/react-dom": "^17.0.14",
+    "@vitejs/plugin-react": "^1.0.7",
+    "autoprefixer": "^10.4.2",
+    "postcss": "^8.4.5",
+    "postcss-nested": "^5.0.6",
+    "stylelint": "^14.3.0",
+    "stylelint-config-idiomatic-order": "^8.1.0",
+    "stylelint-config-prettier": "^9.0.3",
+    "stylelint-config-standard": "^24.0.0",
+    "stylelint-declaration-strict-value": "^1.8.0",
+    "stylelint-high-performance-animation": "^1.6.0",
+    "stylelint-max-lines": "^0.1.0",
+    "stylelint-order": "^3.1.1",
+    "stylelint-use-logical-spec": "^3.2.2",
+    "typescript": "^4.4.4",
+    "vite": "^2.7.2"
+  }
 }
