--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -8,7 +8,8 @@
     "stylelint-high-performance-animation",
     "stylelint-max-lines",
     "stylelint-declaration-strict-value",
-    "stylelint-use-logical-spec"
+    "stylelint-use-logical-spec",
+    "stylelint-use-nesting"
   ],
   "rules": {
     "declaration-empty-line-before": null,
@@ -65,7 +66,8 @@
       {
         "message": "Expected class selector to be camelCase"
       }
-    ]
+    ],
+    "csstools/use-nesting": "ignore"
   },
   "overrides": [
     {
