--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "gql": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
-    "@graphql-codegen/cli": "^2.4.0",
-    "axios": "^0.25.0",
-    "graphql": "^16.2.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^6.2.1",
-    "urql": "^2.0.6"
+    "@graphql-codegen/cli": "^2.16.2",
+    "axios": "^1.2.2",
+    "graphql": "^16.6.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.6.1",
+    "urql": "^3.0.3"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "2.4.0",
@@ -28,13 +28,13 @@
     "@graphql-codegen/typescript-urql": "^3.4.2",
     "@graphql-codegen/urql-introspection": "2.1.1",
     "@types/babel__core": "^7.1.19",
-    "@types/react": "^17.0.33",
-    "@types/react-dom": "^17.0.14",
-    "@vitejs/plugin-react": "^1.0.7",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.10",
+    "@vitejs/plugin-react": "^3.0.0",
     "autoprefixer": "^10.4.2",
-    "postcss": "^8.4.5",
-    "postcss-nested": "^5.0.6",
-    "stylelint": "^14.3.0",
+    "postcss": "^8.4.20",
+    "postcss-nested": "^6.0.0",
+    "stylelint": "^14.16.1",
     "stylelint-config-idiomatic-order": "^8.1.0",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-standard": "^24.0.0",
@@ -43,7 +43,8 @@
     "stylelint-max-lines": "^0.1.0",
     "stylelint-order": "^3.1.1",
     "stylelint-use-logical-spec": "^3.2.2",
-    "typescript": "^4.4.4",
-    "vite": "^2.7.2"
+    "stylelint-use-nesting": "^4.0.0",
+    "typescript": "^4.9.4",
+    "vite": "^4.0.3"
   }
 }
