--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "kitsuawards-client",
   "version": "0.2.0",
+  "type": "module",
   "scripts": {
     "start": "vite",
     "dev": "vite",
@@ -13,10 +14,10 @@
   },
   "dependencies": {
     "@graphql-codegen/cli": "^2.16.2",
+    "@preact/signals": "^1.2.2",
     "axios": "^1.2.2",
     "graphql": "^16.6.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "preact": "^10.19.2",
     "react-router-dom": "^6.6.1",
     "urql": "^3.0.3"
   },
@@ -30,13 +31,11 @@
     "@graphql-codegen/typescript-operations": "2.2.2",
     "@graphql-codegen/typescript-urql": "^3.4.2",
     "@graphql-codegen/urql-introspection": "2.1.1",
+    "@preact/preset-vite": "^2.7.0",
     "@types/babel__core": "^7.1.19",
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.10",
-    "@vitejs/plugin-react": "^3.0.0",
-    "autoprefixer": "^10.4.2",
+    "autoprefixer": "^10.4.16",
     "eslint-plugin-import": "^2.27.5",
-    "postcss": "^8.4.20",
+    "postcss": "^8.4.31",
     "postcss-nested": "^6.0.0",
     "stylelint": "^14.16.1",
     "stylelint-config-idiomatic-order": "^8.1.0",
@@ -48,8 +47,8 @@
     "stylelint-order": "^3.1.1",
     "stylelint-use-logical-spec": "^3.2.2",
     "stylelint-use-nesting": "^4.0.0",
-    "typescript": "^4.9.4",
-    "vite": "^4.0.3"
+    "typescript": "^5.2.2",
+    "vite": "^5.0.2"
   },
   "volta": {
     "node": "20.10.0"
