--- a/package.json
+++ b/package.json
@@ -50,5 +50,8 @@
     "stylelint-use-nesting": "^4.0.0",
     "typescript": "^4.9.4",
     "vite": "^4.0.3"
+  },
+  "volta": {
+    "node": "20.10.0"
   }
 }
