fix stylelint and add import sorting to eslint also updates various packages

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -2,7 +2,7 @@
   "extends": [
     "stylelint-config-standard",
     "stylelint-config-prettier",
-    "./postCSS/stylelint-logically-grouped-order"
+    "./postCSS/stylelint-logically-grouped-order.cjs"
   ],
   "plugins": [
     "stylelint-high-performance-animation",
