add ignoreFiles to stylelint config

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -11,6 +11,7 @@
     "stylelint-use-logical-spec",
     "stylelint-use-nesting"
   ],
+  "ignoreFiles": ["node_modules", "dist"],
   "rules": {
     "declaration-empty-line-before": null,
     "color-no-invalid-hex": true,
