--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gql": "graphql-codegen --config codegen.yml",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
+    "stylelint": "stylelint --config .stylelintrc.json \"**/*.css\"",
     "typecheck": "tsc"
   },
   "dependencies": {
