--- a/.github/workflows/stylelint.yml
+++ b/.github/workflows/stylelint.yml
@@ -14,12 +14,12 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Set up Node
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
-          node-version: 'lts'
+          node-version-file: '.nvmrc'
           cache: 'npm'
 
       - name: Install dependencies
