--- a/.github/workflows/stylelint.yml
+++ b/.github/workflows/stylelint.yml
@@ -25,5 +25,5 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Run ESLint
+      - name: Run Stylelint
         run: npm run stylelint
