--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,12 @@
   "editor.codeActionsOnSave": {
     "source.fixAll": true,
     "source.fixAll.stylelint": true
+  },
+  "[postcss]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "files.associations": {
+    "*.gql": "graphql",
+    "*.css": "postcss"
   }
 }
