--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,32 +1,32 @@
 version: 2
 updates:
-- package-ecosystem: npm
-  directory: "/"
-  schedule:
-    interval: daily
-    time: "20:00"
-  open-pull-requests-limit: 10
-  ignore:
-  - dependency-name: core-js
-    versions:
-    - 3.10.0
-    - 3.10.1
-    - 3.10.2
-    - 3.11.0
-    - 3.9.0
-    - 3.9.1
-  - dependency-name: y18n
-    versions:
-    - 4.0.1
-  - dependency-name: "@vue/cli-service"
-    versions:
-    - 4.5.11
-  - dependency-name: "@vue/cli-plugin-babel"
-    versions:
-    - 4.5.11
-  - dependency-name: "@vue/cli-plugin-router"
-    versions:
-    - 4.5.11
-  - dependency-name: "@vue/cli-plugin-eslint"
-    versions:
-    - 4.5.11
+    - package-ecosystem: npm
+      directory: '/'
+      schedule:
+          interval: daily
+          time: '20:00'
+      open-pull-requests-limit: 10
+      ignore:
+          - dependency-name: core-js
+            versions:
+                - 3.10.0
+                - 3.10.1
+                - 3.10.2
+                - 3.11.0
+                - 3.9.0
+                - 3.9.1
+          - dependency-name: y18n
+            versions:
+                - 4.0.1
+          - dependency-name: '@vue/cli-service'
+            versions:
+                - 4.5.11
+          - dependency-name: '@vue/cli-plugin-babel'
+            versions:
+                - 4.5.11
+          - dependency-name: '@vue/cli-plugin-router'
+            versions:
+                - 4.5.11
+          - dependency-name: '@vue/cli-plugin-eslint'
+            versions:
+                - 4.5.11
