disable indentation detection due to conflict

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,5 +10,6 @@
         "*.gql": "graphql",
         "*.css": "postcss"
     },
-    "editor.indentSize": 4
+    "editor.indentSize": 4,
+    "editor.detectIndentation": false
 }
